impl: Java interface