@@ -2,13 +2,15 @@ package de.tu_darmstadt.systems;
 
 import org.apache.bookkeeper.client.BKException;
 import org.apache.bookkeeper.client.LedgerHandle;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 public class AsyncLedgerContext implements AutoCloseable {
+    private static final Logger LOGGER = LoggerFactory.getLogger(AsyncLedgerContext.class);
     private final LedgerHandle ledgerHandle;
     private final List<CompletableFuture<Long>> onGoingRequests;
 
@@ -19,13 +21,14 @@ public class AsyncLedgerContext implements AutoCloseable {
 
     public void appendAsync(byte[] data) {
         onGoingRequests.add(ledgerHandle.appendAsync(data));
+        LOGGER.info("appending {}", data);
     }
 
-    public List<Long> awaitAll() {
+    public long[] awaitAll() {
         CompletableFuture.allOf(onGoingRequests.toArray(new CompletableFuture[0])).join();
-        List<Long> entryIDs = onGoingRequests.stream().map(CompletableFuture::join).collect(Collectors.toList());
+        List<Long> entryIDs = onGoingRequests.stream().map(CompletableFuture::join).toList();
         onGoingRequests.clear();
-        return entryIDs;
+        return entryIDs.stream().mapToLong(Long::longValue).toArray();
     }
 
     @Override
